[tool.poetry]
name = "kkamji-api"
version = "0.1.0"
description = ""
authors = ["KKamji <xowl5460@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
requests = "^2.32.3"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
pytest = "^8.3.3"
pydantic-settings = "^2.6.0"
passlib = "^1.7.4"
boto3 = "^1.35.51"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
